added second website

--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
         <h3>My First Website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo placeat odit aperiam maxime aspernatur esse ipsum minima suscipit nihil cum?</p>
     </div>
+    <div>
+        <h3>My Second Website</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus doloremque quae totam earum assumenda debitis quasi in, inventore iure temporibus.</p>
+    </div>
 </body>
 </html>
