--- a/index.html
+++ b/index.html
@@ -15,5 +15,11 @@
         <h3>My Second Website</h3>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus doloremque quae totam earum assumenda debitis quasi in, inventore iure temporibus.</p>
     </div>
+    <div>How To Push Git Incremental</div>
+    <ul>
+        <li>Git add </li>
+        <li>Git commit</li>
+        <li>Git push</li>
+    </ul>
 </body>
 </html>
